test/semantics/programs/valid/comparable-types.guav
# Should analyze successfully since all relational expressions have comparable types

a = true == true
b = true == false
c = 3 > 2
d = 4.1 >= 3.1
e = "yoohoo" == "yoohoo"
f = [1, 2, 3] == [1,   2,   3]
