test/semantics/programs/invalid/noncomparable-types2.guav
# Should fail since relational expression has incomparable types

d = "dog" > 4.1
